# ABMOS

./: LICENSE  README.md  pyproject.toml
data/: AgentesEjemplo.csv  AgentsExample.csv  Chocarpamba.json  EfectosSocialesEjemplo.csv  OpinionesEjemplo.csv  OpinionsExample.csv  Pangui.json  ResponsesExample.csv  RespuestasEjemplo.csv  SocialEffectsExample.csv  SurveyValues.json  ValoresEncuestas.json
experiments/Chocarpamba-Pangui/: DataReader.py  DataSynthesiser.py
experiments/Chocarpamba-Panqui/: DataReader.py
src/ABMOS/: __init__.py  __main__.py  agent_space.py  agents.py  graphs.py  logging.py  model.py  visualisation.py
